VM_Cleanup unnecessarily processes all thread oops

XMLWordPrintable

    • b08

        While looking at ZGC latencies in a benchmark with >20000 Java threads, I noticed that the Cleanup VM operation could take up to 500 ms. It turned out that the time was spent processing the oops in all Java threads. Since none of the safepoint cleanup tasks use the oops in the threads, I propose that we stop processing the oops in this VM Operation.

              Assignee:
              Stefan Karlsson
              Reporter:
              Stefan Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: