8280784: VM_Cleanup unnecessarily processes all thread oops

Reviewed-by: eosterlund, shade